# cohort

./: .dockerignore  .env.example  .gitignore  .mcp.json  .public-files  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  PLAN-repo-consolidation.md  QA_PLAYBOOK.md  README.md  SECURITY.md  briefing_rotation.json  build_website_conversations.py  demo_agents.json  demo_conversation.jsonl  demo_conversation_channels.json  docker-compose.yml  pyproject.toml  run_showcase_claude.py  run_showcase_roundtables.py
.claude/: settings.json  settings.local.json
.claude/agents/: analytics_agent.md  brand_design_agent.md  campaign_orchestrator.md  code_archaeologist.md  coding_orchestrator.md  cohort_orchestrator.md  content_strategy_agent.md  database_developer.md  documentation_agent.md  email_agent.md  hardware_agent.md  javascript_developer.md  linkedin.md  marketing_agent.md  media_production_agent.md  python_developer.md  qa_agent.md  reddit.md  security_agent.md  setup_guide.md  supervisor_agent.md  system_coder.md  web_developer.md
.cohort/: .gitignore  channels.json  config.json
.github/workflows/: ci.yml  sync-public.yml
agents/: summary_endpoint.py
agents/analytics_agent/: agent_config.json  agent_prompt.md  memory.json
agents/brand_design_agent/: agent_config.json  agent_prompt.md  memory.json
agents/campaign_orchestrator/: agent_config.json  agent_prompt.md  memory.json
agents/code_archaeologist/: agent_config.json  agent_prompt.md  memory.json
agents/coding_orchestrator/: agent_config.json  agent_prompt.md  memory.json
agents/cohort_orchestrator/: agent_config.json  agent_persona.md  agent_prompt.md  memory.json
agents/content_strategy_agent/: agent_config.json  memory.json  (+1 more)
cohort/: __init__.py  __main__.py  agent.py  agent_api.py  agent_api_models.py  agent_context.py  agent_creator.py  agent_registry.py  agent_router.py  agent_store.py  api.py  approval_store.py  benchmark.py  briefing.py  capability_router.py  channel_bridge.py  chat.py  compiled_roundtable.py  content_analyzer.py  context_enrichment.py  context_hydration.py  context_window.py  cron.py  data_layer.py  deliverables.py  embeddings.py  executive_briefing.py  export_personas.py  file_transport.py  health_monitor.py  import_seed.py  intel_fetcher.py  inventory_loader.py  inventory_query.py  inventory_schema.py  launcher.py  learning.py  meeting.py  memory_manager.py  migrate_json_to_sqlite.py  (+20 more)
config/: desktop_computer_use.yaml  discord_webhooks.json
data/: agent_assessments.json  agents.json  assessment_results.json  benchmark.db  briefing_rotation.json  channels.json  cohort.db  cohort_tools.json  content_config.json  content_projects.json  deleted_channels.json  doc_history.json  messages.json  tasks.json  tool_config_values.json  tool_permissions.json
demos/: README.md  package-lock.json  package.json  playwright.config.ts  run_all_demos.py  tsconfig.json
docs/: benchmark-modes.html  channels.html  docs.html  footer.js  nav.js  pricing.html  roadmap.html  robots.txt  simulator.html  styles.css  tasks.html  team-card-prototype.html  team.html  tools.html  use-cases.html  vscode.html  website-creator.html
examples/: abc-mode-test-results.json  abc_mode_test.py  design_review_demo.py  export_live_scenario.py  export_simulator_scenario.py  file_collaboration.sh  quick_cohort.py  scenario-export.json  scenario-live-export.json
installer/: .gitignore  README.md  build_installer.py  cohort_installer.iss
samples/: complexity_visualization_example.md
scripts/: discord_bridge.py  discord_scheduled.py
tests/: conftest.py  test_agent.py  test_agent_api.py  test_agent_creator.py  test_agent_router.py  test_agent_store.py  test_approval_store.py  test_browser_backend.py  test_capability_router.py  test_channel_bridge.py  test_channel_bridge_http.py  test_channel_bridge_resilience.py  test_chat.py  test_compiled_roundtable.py  test_context_enrichment.py  test_deliverables.py  test_desktop_e2e.py  test_e2e_lite_flow.py  test_embeddings.py  test_executive_briefing.py  test_file_transport.py  test_http_endpoints.py  test_inventory_integration.py  test_inventory_loader.py  test_license_consistency.py  test_local_llm_mcp.py  test_local_router.py  test_mcp_lite.py  test_meeting.py  test_meeting_control.py  test_memory_manager.py  test_orchestrator.py  test_permissions.py  test_protocols.py  test_response_gate.py  test_review_pipeline.py  test_routing_history.py  test_server_http.py  test_server_socketio.py  test_setup_guide.py  (+8 more)
tools/: _score_claude_run.py  agent_assessor.py  agent_assessor_claude.py  benchmark_importer.py  conversation_injector.py  linkedin_quiz_importer.py  run_ab_benchmark_overnight.py  run_assessment_retest.py  run_benchmark_overnight.py  start_channel_session.bat  start_channel_session.ps1
(+575 files in other folders)
