[project]
name = "cohort"
version = "0.2.0"
description = "Multi-agent orchestration with loop prevention and contribution scoring"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ryan Wheeler"},
]
dependencies = []
readme = "README.md"
keywords = ["multi-agent", "orchestration", "llm", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
claude = ["httpx>=0.27", "fastmcp>=0.1"]
server = ["starlette>=0.37", "uvicorn[standard]>=0.29", "python-socketio[asyncio]>=5.10"]
agent-api = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "python-dotenv>=1.0", "pydantic>=2.0"]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]
all = ["cohort[claude,server,agent-api,dev]"]

[project.scripts]
cohort = "cohort.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
